@@ -18,6 +18,7 @@
  + Logging verboseness now configurable for the current session via GUI  
  ! PaperAtlas: NullPointerException when WGS Grid=off has been fixed
  + CustomSQLite atlas as map source: OSMAND format added
+ + New atlas output format: OSMAND SQLite
 
 
 1.9.1 (2011-09-09) 
